@@ -17,7 +17,6 @@
 
 package org.openqa.selenium.grid.distributor.local;
 
-import com.google.common.collect.ImmutableMap;
 import org.junit.Before;
 import org.junit.Test;
 import org.openqa.selenium.Capabilities;
@@ -26,25 +25,29 @@ import org.openqa.selenium.SessionNotCreatedException;
 import org.openqa.selenium.events.EventBus;
 import org.openqa.selenium.events.local.GuavaEventBus;
 import org.openqa.selenium.grid.data.CreateSessionResponse;
+import org.openqa.selenium.grid.data.DefaultSlotMatcher;
 import org.openqa.selenium.grid.data.DistributorStatus;
 import org.openqa.selenium.grid.data.NodeStatus;
 import org.openqa.selenium.grid.data.NodeStatusEvent;
+import org.openqa.selenium.grid.data.RequestId;
 import org.openqa.selenium.grid.data.Session;
+import org.openqa.selenium.grid.data.SessionRequest;
 import org.openqa.selenium.grid.distributor.Distributor;
+import org.openqa.selenium.grid.distributor.selector.DefaultSlotSelector;
 import org.openqa.selenium.grid.node.Node;
 import org.openqa.selenium.grid.node.local.LocalNode;
 import org.openqa.selenium.grid.security.Secret;
 import org.openqa.selenium.grid.sessionmap.local.LocalSessionMap;
+import org.openqa.selenium.grid.sessionqueue.NewSessionQueue;
 import org.openqa.selenium.grid.sessionqueue.local.LocalNewSessionQueue;
-import org.openqa.selenium.grid.sessionqueue.local.LocalNewSessionQueuer;
+import org.openqa.selenium.grid.testing.PassthroughHttpClient;
 import org.openqa.selenium.grid.testing.TestSessionFactory;
 import org.openqa.selenium.internal.Either;
 import org.openqa.selenium.remote.HttpSessionId;
 import org.openqa.selenium.remote.SessionId;
-import org.openqa.selenium.remote.http.Contents;
+import org.openqa.selenium.remote.http.ClientConfig;
 import org.openqa.selenium.remote.http.HttpClient;
 import org.openqa.selenium.remote.http.HttpHandler;
-import org.openqa.selenium.remote.http.HttpMethod;
 import org.openqa.selenium.remote.http.HttpRequest;
 import org.openqa.selenium.remote.http.HttpResponse;
 import org.openqa.selenium.remote.tracing.DefaultTestTracer;
@@ -57,17 +60,23 @@ import java.time.Duration;
 import java.time.Instant;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
 import java.util.UUID;
 import java.util.concurrent.Callable;
+import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.ExecutionException;
+import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.Future;
 import java.util.concurrent.TimeUnit;
 
+import static java.util.Collections.newSetFromMap;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.fail;
 import static org.openqa.selenium.grid.data.Availability.DRAINING;
+import static org.openqa.selenium.remote.Dialect.W3C;
 import static org.openqa.selenium.remote.http.HttpMethod.GET;
 
 public class LocalDistributorTest {
@@ -75,7 +84,6 @@ public class LocalDistributorTest {
   private final Secret registrationSecret = new Secret("bavarian smoked");
   private Tracer tracer;
   private EventBus bus;
-  private HttpClient.Factory clientFactory;
   private URI uri;
   private Node localNode;
 
@@ -83,7 +91,6 @@ public class LocalDistributorTest {
   public void setUp() throws URISyntaxException {
     tracer = DefaultTestTracer.createTracer();
     bus = new GuavaEventBus();
-    clientFactory = HttpClient.Factory.createDefault();
 
     Capabilities caps = new ImmutableCapabilities("browserName", "cheese");
     uri = new URI("http://localhost:1234");
@@ -95,23 +102,23 @@ public class LocalDistributorTest {
 
   @Test
   public void testAddNodeToDistributor() {
-    LocalNewSessionQueue localNewSessionQueue = new LocalNewSessionQueue(
+    NewSessionQueue queue  = new LocalNewSessionQueue(
       tracer,
       bus,
+      new DefaultSlotMatcher(),
       Duration.ofSeconds(2),
-      Duration.ofSeconds(2));
-    LocalNewSessionQueuer queuer = new LocalNewSessionQueuer(
-      tracer,
-      bus,
-      localNewSessionQueue,
+      Duration.ofSeconds(2),
       registrationSecret);
     Distributor distributor = new LocalDistributor(
       tracer,
       bus,
-      clientFactory,
+      new PassthroughHttpClient.Factory(localNode),
       new LocalSessionMap(tracer, bus),
-      queuer,
-      registrationSecret);
+      queue,
+      new DefaultSlotSelector(),
+      registrationSecret,
+      Duration.ofMinutes(5),
+      false);
     distributor.add(localNode);
     DistributorStatus status = distributor.getStatus();
 
@@ -121,57 +128,29 @@ public class LocalDistributorTest {
 
     //Check a couple attributes
     NodeStatus distributorNode = nodes.iterator().next();
-    assertThat(distributorNode.getId()).isEqualByComparingTo(localNode.getId());
-    assertThat(distributorNode.getUri()).isEqualTo(uri);
-  }
-
-  @Test
-  public void testShouldNotAddNodeWithWrongSecret() {
-    Secret secret = new Secret("my_secret");
-    LocalNewSessionQueue localNewSessionQueue = new LocalNewSessionQueue(
-      tracer,
-      bus,
-      Duration.ofSeconds(2),
-      Duration.ofSeconds(2));
-    LocalNewSessionQueuer queuer = new LocalNewSessionQueuer(
-      tracer,
-      bus,
-      localNewSessionQueue,
-      registrationSecret);
-    Distributor secretDistributor = new LocalDistributor(
-        tracer,
-        bus,
-        clientFactory,
-        new LocalSessionMap(tracer, bus),
-        queuer,
-        secret);
-    bus.fire(new NodeStatusEvent(localNode.getStatus()));
-    DistributorStatus status = secretDistributor.getStatus();
-
-    //Check the size
-    final Set<NodeStatus> nodes = status.getNodes();
-    assertThat(nodes.size()).isEqualTo(0);
+    assertThat(distributorNode.getNodeId()).isEqualByComparingTo(localNode.getId());
+    assertThat(distributorNode.getExternalUri()).isEqualTo(uri);
   }
 
   @Test
   public void testRemoveNodeFromDistributor() {
-    LocalNewSessionQueue localNewSessionQueue = new LocalNewSessionQueue(
+    NewSessionQueue queue  = new LocalNewSessionQueue(
       tracer,
       bus,
+      new DefaultSlotMatcher(),
       Duration.ofSeconds(2),
-      Duration.ofSeconds(2));
-    LocalNewSessionQueuer queuer = new LocalNewSessionQueuer(
-      tracer,
-      bus,
-      localNewSessionQueue,
+      Duration.ofSeconds(2),
       registrationSecret);
     Distributor distributor = new LocalDistributor(
       tracer,
       bus,
-      clientFactory,
+      new PassthroughHttpClient.Factory(localNode),
       new LocalSessionMap(tracer, bus),
-      queuer,
-      registrationSecret);
+      queue,
+      new DefaultSlotSelector(),
+      registrationSecret,
+      Duration.ofMinutes(5),
+      false);
     distributor.add(localNode);
 
     //Check the size
@@ -188,23 +167,23 @@ public class LocalDistributorTest {
 
   @Test
   public void testAddSameNodeTwice() {
-    LocalNewSessionQueue localNewSessionQueue = new LocalNewSessionQueue(
+    NewSessionQueue queue  = new LocalNewSessionQueue(
       tracer,
       bus,
+      new DefaultSlotMatcher(),
       Duration.ofSeconds(2),
-      Duration.ofSeconds(2));
-    LocalNewSessionQueuer queuer = new LocalNewSessionQueuer(
-      tracer,
-      bus,
-      localNewSessionQueue,
+      Duration.ofSeconds(2),
       registrationSecret);
     Distributor distributor = new LocalDistributor(
       tracer,
       bus,
-      clientFactory,
+      new PassthroughHttpClient.Factory(localNode),
       new LocalSessionMap(tracer, bus),
-      queuer,
-      registrationSecret);
+      queue,
+      new DefaultSlotSelector(),
+      registrationSecret,
+      Duration.ofMinutes(5),
+      false);
     distributor.add(localNode);
     distributor.add(localNode);
     DistributorStatus status = distributor.getStatus();
@@ -216,23 +195,14 @@ public class LocalDistributorTest {
 
   @Test
   public void shouldBeAbleToAddMultipleSessionsConcurrently() throws Exception {
-    LocalNewSessionQueue localNewSessionQueue = new LocalNewSessionQueue(
+    NewSessionQueue queue  = new LocalNewSessionQueue(
       tracer,
       bus,
+      new DefaultSlotMatcher(),
       Duration.ofSeconds(2),
-      Duration.ofSeconds(2));
-    LocalNewSessionQueuer queuer = new LocalNewSessionQueuer(
-      tracer,
-      bus,
-      localNewSessionQueue,
+      Duration.ofSeconds(2),
       registrationSecret);
-    LocalDistributor distributor = new LocalDistributor(
-      tracer,
-      bus,
-      clientFactory,
-      new LocalSessionMap(tracer, bus),
-      queuer,
-      registrationSecret);
+
 
     // Add one node to ensure that everything is created in that.
     Capabilities caps = new ImmutableCapabilities("browserName", "cheese");
@@ -257,19 +227,34 @@ public class LocalDistributorTest {
       .add(caps, new TestSessionFactory(VerifyingHandler::new))
       .maximumConcurrentSessions(3)
       .build();
+
+    LocalDistributor distributor = new LocalDistributor(
+      tracer,
+      bus,
+      new PassthroughHttpClient.Factory(node),
+      new LocalSessionMap(tracer, bus),
+      queue,
+      new DefaultSlotSelector(),
+      registrationSecret,
+      Duration.ofMinutes(5),
+      false);
+
     distributor.add(node);
 
-    HttpRequest req = new HttpRequest(HttpMethod.POST, "/session")
-        .setContent(Contents.asJson(ImmutableMap.of(
-            "capabilities", ImmutableMap.of(
-                "alwaysMatch", ImmutableMap.of(
-                    "browserName", "cheese")))));
+    SessionRequest sessionRequest =
+        new SessionRequest(
+            new RequestId(UUID.randomUUID()),
+            Instant.now(),
+            Set.of(W3C),
+            Set.of(new ImmutableCapabilities("browserName", "cheese")),
+            Map.of(),
+            Map.of());
 
     List<Callable<SessionId>> callables = new ArrayList<>();
     for (int i = 0; i < 3; i++) {
       callables.add(() -> {
         Either<SessionNotCreatedException, CreateSessionResponse> result =
-          distributor.newSession(req);
+          distributor.newSession(sessionRequest);
         if (result.isRight()) {
           CreateSessionResponse res = result.right();
           assertThat(res.getSession().getCapabilities().getBrowserName()).isEqualTo("cheese");
@@ -295,23 +280,23 @@ public class LocalDistributorTest {
 
   @Test
   public void testDrainNodeFromDistributor() {
-    LocalNewSessionQueue localNewSessionQueue = new LocalNewSessionQueue(
+    NewSessionQueue queue  = new LocalNewSessionQueue(
       tracer,
       bus,
+      new DefaultSlotMatcher(),
       Duration.ofSeconds(2),
-      Duration.ofSeconds(2));
-    LocalNewSessionQueuer queuer = new LocalNewSessionQueuer(
-      tracer,
-      bus,
-      localNewSessionQueue,
+      Duration.ofSeconds(2),
       registrationSecret);
     Distributor distributor = new LocalDistributor(
       tracer,
       bus,
-      clientFactory,
+      new PassthroughHttpClient.Factory(localNode),
       new LocalSessionMap(tracer, bus),
-      queuer,
-      registrationSecret);
+      queue,
+      new DefaultSlotSelector(),
+      registrationSecret,
+      Duration.ofMinutes(5),
+      false);
     distributor.add(localNode);
     assertThat(localNode.isDraining()).isFalse();
 
@@ -335,29 +320,103 @@ public class LocalDistributorTest {
   public void testDrainNodeFromNode() {
     assertThat(localNode.isDraining()).isFalse();
 
-    LocalNewSessionQueue localNewSessionQueue = new LocalNewSessionQueue(
+    NewSessionQueue queue  = new LocalNewSessionQueue(
       tracer,
       bus,
+      new DefaultSlotMatcher(),
       Duration.ofSeconds(2),
-      Duration.ofSeconds(2));
-    LocalNewSessionQueuer queuer = new LocalNewSessionQueuer(
-      tracer,
-      bus,
-      localNewSessionQueue,
+      Duration.ofSeconds(2),
       registrationSecret);
     Distributor distributor = new LocalDistributor(
       tracer,
       bus,
-      clientFactory,
+      new PassthroughHttpClient.Factory(localNode),
       new LocalSessionMap(tracer, bus),
-      queuer,
-      registrationSecret);
+      queue,
+      new DefaultSlotSelector(),
+      registrationSecret,
+      Duration.ofMinutes(5),
+      false);
     distributor.add(localNode);
 
     localNode.drain();
     assertThat(localNode.isDraining()).isTrue();
   }
 
+  @Test
+  public void slowStartingNodesShouldNotCauseReservationsToBeSerialized() {
+    NewSessionQueue queue  = new LocalNewSessionQueue(
+      tracer,
+      bus,
+      new DefaultSlotMatcher(),
+      Duration.ofSeconds(2),
+      Duration.ofSeconds(2),
+      registrationSecret);
+
+    LocalDistributor distributor = new LocalDistributor(
+      tracer,
+      bus,
+      new PassthroughHttpClient.Factory(localNode),
+      new LocalSessionMap(tracer, bus),
+      queue,
+      new DefaultSlotSelector(),
+      registrationSecret,
+      Duration.ofMinutes(5),
+      false);
+
+    Capabilities caps = new ImmutableCapabilities("browserName", "cheese");
+
+    long delay = 4000;
+    LocalNode node = LocalNode.builder(tracer, bus, uri, uri, registrationSecret)
+      .add(caps, new TestSessionFactory(caps, (id, c) -> {
+        try {
+          Thread.sleep(delay);
+        } catch (InterruptedException e) {
+          e.printStackTrace();
+        }
+        return new Handler(c);
+      }))
+      .build();
+
+    distributor.add(node);
+
+    Set<Future<Either<SessionNotCreatedException, CreateSessionResponse>>> futures =
+      newSetFromMap(new ConcurrentHashMap<>());
+    ExecutorService service = Executors.newFixedThreadPool(2);
+
+    long start = System.currentTimeMillis();
+    futures.add(
+      service.submit(() -> distributor.newSession(new SessionRequest(
+        new RequestId(UUID.randomUUID()),
+        Instant.now(),
+        Set.of(W3C),
+        Set.of(caps),
+        Map.of(),
+        Map.of()))));
+    futures.add(
+      service.submit(() -> distributor.newSession(new SessionRequest(
+        new RequestId(UUID.randomUUID()),
+        Instant.now(),
+        Set.of(W3C),
+        Set.of(caps),
+        Map.of(),
+        Map.of()))));
+
+    futures.forEach(f -> {
+      try {
+        f.get();
+      } catch (InterruptedException e) {
+        fail("Interrupted");
+      } catch (ExecutionException e) {
+        throw new RuntimeException(e);
+      }
+    });
+
+    // If the sessions are created serially, then we expect the first
+    // session to take up to `delay` ms to complete, followed by the
+    // second session.
+    assertThat(System.currentTimeMillis() - start).isLessThan(delay * 2);
+  }
 
   private class Handler extends Session implements HttpHandler {
 
