@@ -23,15 +23,20 @@ import org.junit.Test;
 import org.openqa.selenium.Capabilities;
 import org.openqa.selenium.ImmutableCapabilities;
 import org.openqa.selenium.SessionNotCreatedException;
+import org.openqa.selenium.WebDriverException;
 import org.openqa.selenium.events.EventBus;
 import org.openqa.selenium.events.local.GuavaEventBus;
 import org.openqa.selenium.grid.data.CreateSessionRequest;
 import org.openqa.selenium.grid.data.CreateSessionResponse;
+import org.openqa.selenium.grid.data.DefaultSlotMatcher;
+import org.openqa.selenium.grid.data.NewSessionRequestEvent;
 import org.openqa.selenium.grid.data.RequestId;
 import org.openqa.selenium.grid.data.Session;
+import org.openqa.selenium.grid.data.SessionRequest;
 import org.openqa.selenium.grid.data.Slot;
 import org.openqa.selenium.grid.distributor.Distributor;
 import org.openqa.selenium.grid.distributor.local.LocalDistributor;
+import org.openqa.selenium.grid.distributor.selector.DefaultSlotSelector;
 import org.openqa.selenium.grid.node.ActiveSession;
 import org.openqa.selenium.grid.node.Node;
 import org.openqa.selenium.grid.node.SessionFactory;
@@ -39,13 +44,12 @@ import org.openqa.selenium.grid.node.local.LocalNode;
 import org.openqa.selenium.grid.security.Secret;
 import org.openqa.selenium.grid.sessionmap.SessionMap;
 import org.openqa.selenium.grid.sessionmap.local.LocalSessionMap;
-import org.openqa.selenium.grid.sessionqueue.NewSessionQueuer;
+import org.openqa.selenium.grid.sessionqueue.NewSessionQueue;
 import org.openqa.selenium.grid.sessionqueue.local.LocalNewSessionQueue;
-import org.openqa.selenium.grid.sessionqueue.local.LocalNewSessionQueuer;
+import org.openqa.selenium.grid.testing.PassthroughHttpClient;
 import org.openqa.selenium.grid.testing.TestSessionFactory;
 import org.openqa.selenium.internal.Either;
 import org.openqa.selenium.json.Json;
-import org.openqa.selenium.remote.NewSessionPayload;
 import org.openqa.selenium.remote.http.Contents;
 import org.openqa.selenium.remote.http.HttpClient;
 import org.openqa.selenium.remote.http.HttpHandler;
@@ -56,29 +60,27 @@ import org.openqa.selenium.remote.tracing.Tracer;
 import org.openqa.selenium.support.ui.FluentWait;
 import org.openqa.selenium.support.ui.Wait;
 
-import java.io.IOException;
-import java.io.UncheckedIOException;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.time.Duration;
 import java.time.Instant;
 import java.util.Collections;
 import java.util.Map;
-import java.util.Optional;
 import java.util.Set;
 import java.util.UUID;
+import java.util.concurrent.CountDownLatch;
 
 import static java.util.Collections.singletonList;
 import static java.util.Collections.singletonMap;
+import static java.util.concurrent.TimeUnit.SECONDS;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.fail;
 import static org.assertj.core.api.InstanceOfAssertFactories.LIST;
 import static org.assertj.core.api.InstanceOfAssertFactories.MAP;
 import static org.openqa.selenium.json.Json.MAP_TYPE;
-import static org.openqa.selenium.remote.http.Contents.asJson;
-import static org.openqa.selenium.remote.http.Contents.utf8String;
+import static org.openqa.selenium.remote.Dialect.OSS;
+import static org.openqa.selenium.remote.Dialect.W3C;
 import static org.openqa.selenium.remote.http.HttpMethod.GET;
-import static org.openqa.selenium.remote.http.HttpMethod.POST;
 
 public class GraphqlHandlerTest {
 
@@ -88,13 +90,13 @@ public class GraphqlHandlerTest {
   private final String version = "4.0.0";
   private final Wait<Object> wait = new FluentWait<>(new Object()).withTimeout(Duration.ofSeconds(5));
   private Distributor distributor;
-  private NewSessionQueuer queuer;
+  private NewSessionQueue queue;
   private Tracer tracer;
   private EventBus events;
   private ImmutableCapabilities caps;
   private ImmutableCapabilities stereotype;
-  private LocalNewSessionQueue localNewSessionQueue;
-  private NewSessionPayload payload;
+  private SessionRequest sessionRequest;
+  private SessionMap sessions;
 
   public GraphqlHandlerTest() throws URISyntaxException {
   }
@@ -105,21 +107,23 @@ public class GraphqlHandlerTest {
     events = new GuavaEventBus();
     HttpClient.Factory clientFactory = HttpClient.Factory.createDefault();
 
-    SessionMap sessions = new LocalSessionMap(tracer, events);
+    sessions = new LocalSessionMap(tracer, events);
     stereotype = new ImmutableCapabilities("browserName", "cheese");
     caps = new ImmutableCapabilities("browserName", "cheese");
-    payload = NewSessionPayload.create(caps);
+    sessionRequest = new SessionRequest(
+      new RequestId(UUID.randomUUID()),
+      Instant.now(),
+      Set.of(OSS, W3C),
+      Set.of(caps),
+      Map.of(),
+      Map.of());
 
-    localNewSessionQueue = new LocalNewSessionQueue(
+    queue = new LocalNewSessionQueue(
       tracer,
       events,
+      new DefaultSlotMatcher(),
       Duration.ofSeconds(2),
-      Duration.ofSeconds(2));
-
-    queuer = new LocalNewSessionQueuer(
-      tracer,
-      events,
-      localNewSessionQueue,
+      Duration.ofSeconds(2),
       registrationSecret);
 
     distributor = new LocalDistributor(
@@ -127,13 +131,16 @@ public class GraphqlHandlerTest {
       events,
       clientFactory,
       sessions,
-      queuer,
-      registrationSecret);
+      queue,
+      new DefaultSlotSelector(),
+      registrationSecret,
+      Duration.ofMinutes(5),
+      false);
   }
 
   @Test
   public void shouldBeAbleToGetGridUri() {
-    GraphqlHandler handler = new GraphqlHandler(tracer, distributor, queuer, publicUri, version);
+    GraphqlHandler handler = new GraphqlHandler(tracer, distributor, queue, publicUri, version);
 
     Map<String, Object> topLevel = executeQuery(handler, "{ grid { uri } }");
 
@@ -146,7 +153,7 @@ public class GraphqlHandlerTest {
 
   @Test
   public void shouldBeAbleToGetGridVersion() {
-    GraphqlHandler handler = new GraphqlHandler(tracer, distributor, queuer, publicUri, version);
+    GraphqlHandler handler = new GraphqlHandler(tracer, distributor, queue, publicUri, version);
 
     Map<String, Object> topLevel = executeQuery(handler, "{ grid { version } }");
 
@@ -157,16 +164,31 @@ public class GraphqlHandlerTest {
             "version", version))));
   }
 
+  private void continueOnceAddedToQueue(SessionRequest request) {
+    // Add to the queue in the background
+    CountDownLatch latch = new CountDownLatch(1);
+    events.addListener(NewSessionRequestEvent.listener(id -> latch.countDown()));
+    new Thread(() -> queue.addToQueue(request)).start();
+    try {
+      assertThat(latch.await(5, SECONDS)).isTrue();
+    } catch (InterruptedException e) {
+      Thread.currentThread().interrupt();
+      throw new RuntimeException(e);
+    }
+  }
+
   @Test
   public void shouldBeAbleToGetSessionQueueSize() {
-    HttpRequest request = new HttpRequest(POST, "/session");
-    request.setContent(asJson(
-      ImmutableMap.of(
-        "capabilities", ImmutableMap.of(
-          "alwaysMatch", caps))));
+    SessionRequest request = new SessionRequest(
+      new RequestId(UUID.randomUUID()),
+      Instant.now(),
+      Set.of(W3C),
+      Set.of(caps),
+      Map.of(),
+      Map.of());
 
-    localNewSessionQueue.offerLast(request, new RequestId(UUID.randomUUID()));
-    GraphqlHandler handler = new GraphqlHandler(tracer, distributor, queuer, publicUri, version);
+    continueOnceAddedToQueue(request);
+    GraphqlHandler handler = new GraphqlHandler(tracer, distributor, queue, publicUri, version);
 
     Map<String, Object> topLevel = executeQuery(handler, "{ grid { sessionQueueSize } }");
 
@@ -179,14 +201,17 @@ public class GraphqlHandlerTest {
 
   @Test
   public void shouldBeAbleToGetSessionQueueRequests() {
-    HttpRequest request = new HttpRequest(POST, "/session");
-    request.setContent(asJson(
-      ImmutableMap.of(
-        "capabilities", ImmutableMap.of(
-          "alwaysMatch", caps))));
+    SessionRequest request = new SessionRequest(
+      new RequestId(UUID.randomUUID()),
+      Instant.now(),
+      Set.of(W3C),
+      Set.of(caps),
+      Map.of(),
+      Map.of());
 
-    localNewSessionQueue.offerLast(request, new RequestId(UUID.randomUUID()));
-    GraphqlHandler handler = new GraphqlHandler(tracer, distributor, queuer, publicUri, version);
+    continueOnceAddedToQueue(request);
+
+    GraphqlHandler handler = new GraphqlHandler(tracer, distributor, queue, publicUri, version);
 
     Map<String, Object> topLevel = executeQuery(handler,
       "{ sessionsInfo { sessionQueueRequests } }");
@@ -200,7 +225,7 @@ public class GraphqlHandlerTest {
 
   @Test
   public void shouldBeReturnAnEmptyListIfQueueIsEmpty() {
-    GraphqlHandler handler = new GraphqlHandler(tracer, distributor, queuer, publicUri, version);
+    GraphqlHandler handler = new GraphqlHandler(tracer, distributor, queue, publicUri, version);
 
     Map<String, Object> topLevel = executeQuery(handler,
       "{ sessionsInfo { sessionQueueRequests } }");
@@ -214,7 +239,7 @@ public class GraphqlHandlerTest {
 
   @Test
   public void shouldReturnAnEmptyListForNodesIfNoneAreRegistered() {
-    GraphqlHandler handler = new GraphqlHandler(tracer, distributor, queuer, publicUri, version);
+    GraphqlHandler handler = new GraphqlHandler(tracer, distributor, queue, publicUri, version);
 
     Map<String, Object> topLevel = executeQuery(handler, "{ nodesInfo { nodes { uri } } }");
 
@@ -232,8 +257,9 @@ public class GraphqlHandlerTest {
     Node node = LocalNode.builder(tracer, events, new URI(nodeUri), publicUri, registrationSecret)
       .add(stereotype, new SessionFactory() {
         @Override
-        public Optional<ActiveSession> apply(CreateSessionRequest createSessionRequest) {
-          return Optional.empty();
+        public Either<WebDriverException, ActiveSession> apply(
+          CreateSessionRequest createSessionRequest) {
+          return Either.left(new SessionNotCreatedException("Factory for testing"));
         }
 
         @Override
@@ -245,7 +271,7 @@ public class GraphqlHandlerTest {
     distributor.add(node);
     wait.until(obj -> distributor.getStatus().hasCapacity());
 
-    GraphqlHandler handler = new GraphqlHandler(tracer, distributor, queuer, publicUri, version);
+    GraphqlHandler handler = new GraphqlHandler(tracer, distributor, queue, publicUri, version);
     Map<String, Object> topLevel = executeQuery(handler, "{ nodesInfo { nodes { uri } } }");
 
     assertThat(topLevel).describedAs(topLevel.toString()).isEqualTo(
@@ -268,16 +294,26 @@ public class GraphqlHandlerTest {
         caps,
         Instant.now()))).build();
 
+    distributor = new LocalDistributor(
+      tracer,
+      events,
+      new PassthroughHttpClient.Factory(node),
+      sessions,
+      queue,
+      new DefaultSlotSelector(),
+      registrationSecret,
+      Duration.ofMinutes(5),
+      false);
+
     distributor.add(node);
     wait.until(obj -> distributor.getStatus().hasCapacity());
 
-    Either<SessionNotCreatedException, CreateSessionResponse> response =
-      distributor.newSession(createRequest(payload));
+    Either<SessionNotCreatedException, CreateSessionResponse> response = distributor.newSession(sessionRequest);
     if (response.isRight()) {
       Session session = response.right().getSession();
 
       assertThat(session).isNotNull();
-      GraphqlHandler handler = new GraphqlHandler(tracer, distributor, queuer, publicUri, version);
+      GraphqlHandler handler = new GraphqlHandler(tracer, distributor, queue, publicUri, version);
       Map<String, Object> topLevel = executeQuery(handler,
         "{ grid { sessionCount } }");
 
@@ -304,11 +340,21 @@ public class GraphqlHandlerTest {
         caps,
         Instant.now()))).build();
 
+    distributor = new LocalDistributor(
+      tracer,
+      events,
+      new PassthroughHttpClient.Factory(node),
+      sessions,
+      queue,
+      new DefaultSlotSelector(),
+      registrationSecret,
+      Duration.ofMinutes(5),
+      false);
+
     distributor.add(node);
     wait.until(obj -> distributor.getStatus().hasCapacity());
 
-    Either<SessionNotCreatedException, CreateSessionResponse> response =
-      distributor.newSession(createRequest(payload));
+    Either<SessionNotCreatedException, CreateSessionResponse> response = distributor.newSession(sessionRequest);
     if (response.isRight()) {
       Session session = response.right().getSession();
 
@@ -331,7 +377,7 @@ public class GraphqlHandlerTest {
       String query = String.format(
         "{ session (id: \"%s\") { id, capabilities, startTime, uri } }", sessionId);
 
-      GraphqlHandler handler = new GraphqlHandler(tracer, distributor, queuer, publicUri, version);
+      GraphqlHandler handler = new GraphqlHandler(tracer, distributor, queue, publicUri, version);
       Map<String, Object> result = executeQuery(handler, query);
 
       assertThat(result).describedAs(result.toString()).isEqualTo(
@@ -360,11 +406,21 @@ public class GraphqlHandlerTest {
         caps,
         Instant.now()))).build();
 
+    distributor = new LocalDistributor(
+      tracer,
+      events,
+      new PassthroughHttpClient.Factory(node),
+      sessions,
+      queue,
+      new DefaultSlotSelector(),
+      registrationSecret,
+      Duration.ofMinutes(5),
+      false);
+
     distributor.add(node);
     wait.until(obj -> distributor.getStatus().hasCapacity());
 
-    Either<SessionNotCreatedException, CreateSessionResponse> response =
-      distributor.newSession(createRequest(payload));
+    Either<SessionNotCreatedException, CreateSessionResponse> response = distributor.newSession(sessionRequest);
 
     if (response.isRight()) {
       Session session = response.right().getSession();
@@ -387,7 +443,7 @@ public class GraphqlHandlerTest {
           slot);
       String query = String.format("{ session (id: \"%s\") { nodeId, nodeUri } }", sessionId);
 
-      GraphqlHandler handler = new GraphqlHandler(tracer, distributor, queuer, publicUri, version);
+      GraphqlHandler handler = new GraphqlHandler(tracer, distributor, queue, publicUri, version);
       Map<String, Object> result = executeQuery(handler, query);
 
       assertThat(result).describedAs(result.toString()).isEqualTo(
@@ -414,11 +470,21 @@ public class GraphqlHandlerTest {
         caps,
         Instant.now()))).build();
 
+    distributor = new LocalDistributor(
+      tracer,
+      events,
+      new PassthroughHttpClient.Factory(node),
+      sessions,
+      queue,
+      new DefaultSlotSelector(),
+      registrationSecret,
+      Duration.ofMinutes(5),
+      false);
+
     distributor.add(node);
     wait.until(obj -> distributor.getStatus().hasCapacity());
 
-    Either<SessionNotCreatedException, CreateSessionResponse> response =
-      distributor.newSession(createRequest(payload));
+    Either<SessionNotCreatedException, CreateSessionResponse> response = distributor.newSession(sessionRequest);
 
     if (response.isRight()) {
       Session session = response.right().getSession();
@@ -445,7 +511,7 @@ public class GraphqlHandlerTest {
       String query = String.format(
         "{ session (id: \"%s\") { slot { id, stereotype, lastStarted } } }", sessionId);
 
-      GraphqlHandler handler = new GraphqlHandler(tracer, distributor, queuer, publicUri, version);
+      GraphqlHandler handler = new GraphqlHandler(tracer, distributor, queue, publicUri, version);
       Map<String, Object> result = executeQuery(handler, query);
 
       assertThat(result).describedAs(result.toString()).isEqualTo(
@@ -474,11 +540,21 @@ public class GraphqlHandlerTest {
         caps,
         Instant.now()))).build();
 
+    distributor = new LocalDistributor(
+      tracer,
+      events,
+      new PassthroughHttpClient.Factory(node),
+      sessions,
+      queue,
+      new DefaultSlotSelector(),
+      registrationSecret,
+      Duration.ofMinutes(5),
+      false);
+
     distributor.add(node);
     wait.until(obj -> distributor.getStatus().hasCapacity());
 
-    Either<SessionNotCreatedException, CreateSessionResponse> response =
-      distributor.newSession(createRequest(payload));
+    Either<SessionNotCreatedException, CreateSessionResponse> response = distributor.newSession(sessionRequest);
 
     if (response.isRight()) {
       Session session = response.right().getSession();
@@ -488,7 +564,7 @@ public class GraphqlHandlerTest {
 
       String query = String.format("{ session (id: \"%s\") { sessionDurationMillis } }", sessionId);
 
-      GraphqlHandler handler = new GraphqlHandler(tracer, distributor, queuer, publicUri, version);
+      GraphqlHandler handler = new GraphqlHandler(tracer, distributor, queue, publicUri, version);
       Map<String, Object> result = executeQuery(handler, query);
 
       assertThat(result)
@@ -519,7 +595,7 @@ public class GraphqlHandlerTest {
     String randomSessionId = UUID.randomUUID().toString();
     String query = "{ session (id: \"" + randomSessionId + "\") { sessionDurationMillis } }";
 
-    GraphqlHandler handler = new GraphqlHandler(tracer, distributor, queuer, publicUri, version);
+    GraphqlHandler handler = new GraphqlHandler(tracer, distributor, queue, publicUri, version);
     Map<String, Object> result = executeQuery(handler, query);
     assertThat(result)
       .containsEntry("data", null)
@@ -548,7 +624,7 @@ public class GraphqlHandlerTest {
 
     String query = "{ session (id: \"\") { sessionDurationMillis } }";
 
-    GraphqlHandler handler = new GraphqlHandler(tracer, distributor, queuer, publicUri, version);
+    GraphqlHandler handler = new GraphqlHandler(tracer, distributor, queue, publicUri, version);
     Map<String, Object> result = executeQuery(handler, query);
     assertThat(result)
       .containsEntry("data", null)
@@ -562,19 +638,5 @@ public class GraphqlHandlerTest {
         .setContent(Contents.asJson(singletonMap("query", query))));
 
     return new Json().toType(Contents.string(res), MAP_TYPE);
-  }
-
-  private HttpRequest createRequest(NewSessionPayload payload) {
-    StringBuilder builder = new StringBuilder();
-    try {
-      payload.writeTo(builder);
-    } catch (IOException e) {
-      throw new UncheckedIOException(e);
-    }
-
-    HttpRequest request = new HttpRequest(POST, "/se/grid/distributor/session");
-    request.setContent(utf8String(builder.toString()));
-
-    return request;
   }
 }
